2009-05-06  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Prevent Erlang R13B compilation warning:
	behaviour X undefined (EJAB-920)

	* src/ejabberd_loglevel.erl: Use dynamic_compile instead of
	ram_file_io_server. Support definition of loglevels with integer
	or atom. (thanks to Geoff Cant)(EJAB-919)
	* src/dynamic_compile.erl: Added erlang module that converts
	string to binary loadable code by Mats Cronqvist, Chris Newcombe,
	and Jacob Vorreuter.
	* src/ram_file_io_server.erl: Remove file not longer useful.
	* src/ejabberd.app: Likewise

2009-05-03  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Fix badarg return (EJAB-899)

2009-04-30  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: API change for major optimization
	* src/mod_pubsub/pubsub.hrl: Likewise
	* src/mod_pubsub/nodetree_default.erl: Likewise
	* src/mod_pubsub/nodetree_virtual.erl: Likewise
	* src/mod_pubsub/node_mb.erl: Likewise
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/node_flat.erl: Likewise
	* src/mod_pubsub/node.template: Likewise
	* src/mod_pubsub/gen_pubsub_node.erl: Likewise
	* src/mod_pubsub/gen_pubsub_nodetree.erl: Likewise

	* src/mod_caps.erl: Reduce memory consumption and remove mnesia table

2009-04-28  Badlop  <badlop@process-one.net>

	* src/ejabberd_hooks.erl: Support distributed hooks (EJAB-829)

	* src/ejabberd_hooks.erl: anonymous functions support.

2009-04-27  Badlop  <badlop@process-one.net>

	* src/translate.erl: Support additional files (EJAB-925)
	* contrib/extract_translations/extract_translations.erl: Likewise
	* contrib/extract_translations/prepare-translation.sh: Likewise
